--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^4.1",
+        "spatie/laravel-analytics": "^5.0",
         "spatie/laravel-settings": "^3.7"
     },
     "require-dev": {
